--- a/lab_work_week_8/lab_work_week_8.vcxproj.filters
+++ b/lab_work_week_8/lab_work_week_8.vcxproj.filters
@@ -42,4 +42,7 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Text.txt" />
+  </ItemGroup>
 </Project>
