--- a/lab_work_week_8/lab_work_week_8.vcxproj
+++ b/lab_work_week_8/lab_work_week_8.vcxproj
@@ -149,6 +149,9 @@
     <ClCompile Include="Smart_pointer.cpp" />
     <ClCompile Include="student.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Text.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
