--- a/lab_work_week_8/lab_work_week_8.vcxproj.filters
+++ b/lab_work_week_8/lab_work_week_8.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClInclude Include="Smart_pointer.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Html_validator.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="mystring.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -41,8 +47,17 @@
     <ClCompile Include="Smart_pointer.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Html_validator.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="mystring.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Text.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Test_WEB_PAGE.htm" />
   </ItemGroup>
 </Project>
