--- a/lab_work_week_8/lab_work_week_8.vcxproj.filters
+++ b/lab_work_week_8/lab_work_week_8.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="mystring.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Rail_way_station_info.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -51,6 +54,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="mystring.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Rail_way_station_info.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
