--- a/lab_work_week_8/lab_work_week_8.vcxproj.filters
+++ b/lab_work_week_8/lab_work_week_8.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Rail_way_station_info.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Dictionary_on_map.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -59,9 +62,13 @@
     <ClCompile Include="Rail_way_station_info.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Dictionary_on_map.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Text.txt" />
+    <Text Include="Dictionary_test.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Test_WEB_PAGE.htm" />
